--- a/EzSchool/Views/Home/ChangePassword.cshtml
+++ b/EzSchool/Views/Home/ChangePassword.cshtml
@@ -22,7 +22,8 @@
     <link href="~/content/AdminTemp/css/sb-admin-2.min.css" rel="stylesheet">
 </head>
 
-<body class="bg-gradient-primary">
+<body style="background-image: url('@Url.Content("~/content/AdminTemp/img/bg-gradiant.jpg")'); background-size: cover; background-repeat: no-repeat;">
+
     <div class="container">
         <!-- Outer Row -->
         <div class="row justify-content-center">
